fixes to tukano recommends